Fix top spacing on uncovered line button

--- a/src/coverage.css
+++ b/src/coverage.css
@@ -137,7 +137,6 @@
 
   .qlty-icon {
     background-color: #9198a1;
-    top: auto;
   }
 }
 
